    * 3912 elphase.include: now device states can be mapped to monitoring states
    * 3913 gude_relayport, gude_temp, gude_humidity: new checks and relayport check now monitors electricity
    * 3954 postfix_mailq_status: new check which monitors the status of postfix mail instances
    * 3945 fortigate_node: Memory on fortigate clusters are now configurable by WATO...
    * 3894 FIX: mkeventd_status: Fixed bug in case Event Console is not running
    * 3907 FIX: oracle_tablespaces: simplyfied free space calculation depending on version...
    * 3819 FIX: windows agent: fixed 2 bugs related to mrpe...
    * 3909 FIX: postfix_mailq: fixed readout postfix config
    * 3748 FIX: vertias_vcs: Fix empty agent section for standard xinetd configuration...
    * 3935 FIX: FIX avaya_45xx_cpu: check got UNKNOWN using Nagios core
    * 3896 FIX: Agent RPMs: Fixing dependency issue with old check_mk-agent-oracle-*.rpm and check_mk-agent-logwatch-*.rpm

    WATO:
    * 3915 User access times: New icon when never logged in; New column "last seen"
    * 3914 FIX: Roles: Aliases are now unique during cloning
    * 3820 FIX: Network scan: no longer fails completely if hostname already exists in configuration...

    BI:
    * 3955 BI rule ID can now be renamed

    Livestatus:
    * 3740 Moved livedump utility from treasures directly into bin directory...

    HW/SW-Inventory:
    * 3906 oracle: now version, database creation and startup time, log and open mode, logins, flashback are inventorised
    * 3944 Added OS related information for Cisco, Fireeye and Infoblox devices...
    * 3908 winperf_if, lnx_if: new inventory plugins for switch port statistics of linux and windows hosts


1.4.0i1:
    Core & Setup:
    * 3342 MKP: local/lib and local/bin of sites can now be packed...
    * 3114 linux and windows agent can now be configured to directly encrypt their output. For real-time updates encryption is now optional (but active per default)...