@@ -1,0 +1,9 @@
+Title: fileinfo.groups: now allows regular expressions within include and exclude patterns each beginning with a tilde
+Level: 1
+Component: checks
+Compatible: compat
+Version: 1.4.0i2
+Date: 1476178717
+Class: feature
+
+
