@@ -10,6 +10,7 @@
     * 3913 gude_relayport, gude_temp, gude_humidity: new checks and relayport check now monitors electricity
     * 3954 postfix_mailq_status: new check which monitors the status of postfix mail instances
     * 3945 fortigate_node: Memory on fortigate clusters are now configurable by WATO...
+    * 3956 fileinfo.groups: now allows regular expressions within include and exclude patterns each beginning with a tilde
     * 3894 FIX: mkeventd_status: Fixed bug in case Event Console is not running
     * 3907 FIX: oracle_tablespaces: simplyfied free space calculation depending on version...
     * 3819 FIX: windows agent: fixed 2 bugs related to mrpe...
